dataset1235/2025-2/805158916/users/69248557/executions/2651470117_3691284457.log
== SUBMISSION (2025-08-27 04:13:26)
-- CODE: 
nota1 = int(input("Insira nota 1 "))
nota2 = int(input("Insira nota 2 "))
nota3 = int(input("Insira nota 3 "))
nota4 = int(input("Insira nota 4 "))

m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/1+2+3+4

print(round(m_p, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.75'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '7.0'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.0'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.0'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:12:08)
-- CODE: 
nota1 = int(input("Insira nota 1 "))
nota2 = int(input("Insira nota 2 "))
nota3 = int(input("Insira nota 3 "))
nota4 = int(input("Insira nota 4 "))

m_p = (0*nota1)+(1*nota2)+(2*nota3)+(3*nota4)/

print(round(m_p, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 6
    m_p = (0*nota1)+(1*nota2)+(2*nota3)+(3*nota4)/
                                                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 6
    m_p = (0*nota1)+(1*nota2)+(2*nota3)+(3*nota4)/
                                                  ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 6
    m_p = (0*nota1)+(1*nota2)+(2*nota3)+(3*nota4)/
                                                  ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 6
    m_p = (0*nota1)+(1*nota2)+(2*nota3)+(3*nota4)/
                                                  ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 6
    m_p = (0*nota1)+(1*nota2)+(2*nota3)+(3*nota4)/
                                                  ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 6
    m_p = (0*nota1)+(1*nota2)+(2*nota3)+(3*nota4)/
                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:12:51)
-- CODE: 
nota1 = int(input("Insira nota 1 "))
nota2 = int(input("Insira nota 2 "))
nota3 = int(input("Insira nota 3 "))
nota4 = int(input("Insira nota 4 "))

m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/1+2+3+4

print(round(m_p, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.75'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '7.0'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.0'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:17:28)
-- CODE: 
nota1 = float(input("Insira nota 1 "))
nota2 = float(input("Insira nota 2 "))
nota3 = float(input("Insira nota 3 "))
nota4 = float(input("Insira nota 4 "))

m_p = ((1*nota1)+(2*nota2)+(3*nota3)+(4*nota4))/10

print(round(m_p, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:02:32)
-- CODE: 
nota1 = float(input("Insira nota 1 "))
nota2 = float(input("Insira nota 2 "))
nota3 = float(input("Insira nota 3 "))
nota4 = float(input("Insira nota 4 "))

m_p = (1*nota1+2*nota2+3*nota3+4*nota4)/1+2+3+4

print(round(m_p, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 88.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 91.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 79.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 76.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 309.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 87.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:16:57)
-- CODE: 
nota1 = float(input("Insira nota 1 "))
nota2 = float(input("Insira nota 2 "))
nota3 = float(input("Insira nota 3 "))
nota4 = float(input("Insira nota 4 "))

m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/10

print(round(m_p, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 47.0
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 49.6
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 44.8
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 31.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 156.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 42.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:12:22)
-- CODE: 
nota1 = int(input("Insira nota 1 "))
nota2 = int(input("Insira nota 2 "))
nota3 = int(input("Insira nota 3 "))
nota4 = int(input("Insira nota 4 "))

m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/

print(round(m_p, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 6
    m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/
                                                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 6
    m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/
                                                  ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 6
    m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/
                                                  ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 6
    m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/
                                                  ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 6
    m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/
                                                  ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 6
    m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/
                                                  ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:04:19)
-- CODE: 
nota1 = float(input("Insira nota 1 "))
nota2 = float(input("Insira nota 2 "))
nota3 = float(input("Insira nota 3 "))
nota4 = float(input("Insira nota 4 "))

m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/1+2+3+4

print(round(m_p, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 88.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 91.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 79.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 76.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 309.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 87.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:12:26)
-- CODE: 
nota1 = int(input("Insira nota 1 "))
nota2 = int(input("Insira nota 2 "))
nota3 = int(input("Insira nota 3 "))
nota4 = int(input("Insira nota 4 "))

m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/

print(round(m_p, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 6
    m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/
                                                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 6
    m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/
                                                  ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 6
    m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/
                                                  ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 6
    m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/
                                                  ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 6
    m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/
                                                  ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 6
    m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/
                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:59:59)
-- CODE: 
nota1 = float(input("Insira nota 1 "))
nota2 = float(input("Insira nota 2 "))
nota3 = float(input("Insira nota 3 "))
nota4 = float(input("Insira nota 4 "))

m_p = (1*nota1+2*nota2+3*nota3+4*nota4)/nota1+nota2+nota3+nota4

print(round(m_p, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 37.64
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 34.75
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 31.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    m_p = (1*nota1+2*nota2+3*nota3+4*nota4)/nota1+nota2+nota3+nota4
          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
ZeroDivisionError: float division by zero
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 120.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira nota 1 Insira nota 2 Insira nota 3 Insira nota 4 37.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:05:37)
-- CODE: 
nota1 = int(input("Insira nota 1 "))
nota2 = int(input("Insira nota 2 "))
nota3 = int(input("Insira nota 3 "))
nota4 = int(input("Insira nota 4 "))

m_p = (1*nota1)+(2*nota2)+(3*nota3)+(4*nota4)/1+2+3+4

print(round(m_p, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.75'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '7.0'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.0'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira nota 1 "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
